css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Montserrat','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1rem;
    color: #707070;
}

a {
    text-decoration: none;
    color: #707070;
}

a, button {
    cursor: pointer;
}

/* Button Styles */
button:hover {
    transition: ease-in-out 0.5s;
}

button:active {
    transition: ease-in-out 0.5s;
}

.btn {
    padding: 15px 25px;
    border: none;
    border-radius: 2px;
    font-size: 1rem;
}

.btn--outline {
    border: 1px solid #05A0E9;
    background-color: white;
    color: #05A0E9;
}

.btn--outline:hover {
    background-color: #05A0E9;
    color: white;
}

.btn--outline:active {
    border: 1px solid #05A0E9;
    background-color: white;
    color: #05A0E9;
}

.btn--solid {
    border: 1px solid #05A0E9;
    background-color: #05A0E9;
    color: white;
}

.btn--solid:hover {
    border: 1px solid #0873b6;
    background-color: #0873b6;
}

/* Section Headers */
.section__header--projects, 
.section__header--skills, 
.section__header--bio {
    position: relative;
    margin: 40px auto;
    padding: 0 20px;
    width: fit-content;
    color: white;
    transform: rotate(-5deg)
}

.section__header--projects::before, 
.section__header--skills::before, 
.section__header--bio::before {
    content: '';
    position: absolute;
    width: 178px;
    height: 89.2px;
    top: 1.08px;
    left: -8.48px;
    z-index: -1;
    background-color: #08b67c;
    border-radius: 5px;
}

.section__header--projects::after,
.section__header--skills::after, 
.section__header--bio::after {
    content: '';
    position: absolute;
    width: 165.6px;
    height: 92.8px;
    top: 1.08px;
    left: -6.8px;
    z-index: -2;
    background-color: #0873b6;
    border-radius: 5px;
    transform: rotate(-8deg);
}

/* Adjustments for different size of word 'Skills' */
.section__header--skills::before {
    width: 155.6px;
    height: 82.8px;
    top: -.08px;
    left: -22.72px;
}

.section__header--skills::after {
    width: 165.8px;
    height: 82.8px;
    top: 5.2px;
    left: -30.296px;
}

/* Adjustments for different size of word 'Bio' */
.section__header--bio::before {
    width: 155.6px;
    height: 82.8px;
    top: -.08px;
    left: -28.72px;
}

.section__header--bio::after {
    width: 165.8px;
    height: 82.8px;
    top: 5.2px;
    left: -30.296px;
}

/* Header Section */
.header {
    display: flex;
    flex-direction: column;
    align-content: space-between;
    min-height: 50vh;
    background-color: #1DA1F2;
    color: white;
    text-align: center;
}

.header__container {
    margin: auto 0;
    align-self: center;
}

.header__container h1 {
    margin: 15px 0;
    font-size: 2.5rem;
}

.header__container p {
    display: block;
    font-size: 1.5rem;
}

.header__container button {
    display: block;
    margin: 45px auto 0 auto;
    padding: 15px 40px;
    border: none;
    font-size: 1rem;
}

.header__container button:hover {
    /* Change padding to adjust for extra border */
    padding: 13px 38px;
    border: 2px solid white;
    background-color: #05A0E9;
    color: white;
}

.header__container button:active {
    background-color: #0873b6;
}

/* Project Section */
.project__container--main {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
}

.project {
    margin: 5px 5px 25px 5px;
    border: 0px solid #707070;
    border-radius: 5px;
    box-shadow: 0px 0px 1px #707070;
    text-align: center;
    transition: all ease-in-out .5s;
}

.project__header {
    text-align: center;
    line-height: 4.5rem;
    font-size: 1.25rem;
    transition: all ease-in-out .5s;
}

.project__description--container p {
    margin: 25px 0;
    font-size: 1.25rem;
}

.project h3 {
    padding: 15px;
    background-color: #0873b6;
    color: white;
    font-size: 1.45rem;
    font-weight: 100;   
}

.project img {
    max-width: 100%;
}

.project__skill--container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.project__btn--container {
    display: flex;
    justify-content: space-around;
    padding: 35px 0;
    font-size: 1.5rem;
    transition: all ease-in-out .5s;
}

@media screen and (min-width: 600px) {
    .project {
        max-width: 550px;
    }

    .project__btn--container button {
        padding: 10px 20px;
    }
}

@media screen and (min-width: 1082px) {
    .project {
        max-width: 350px;
    }
}

@media screen and (min-width: 1400px) {
    .project {
        max-width: 450px;
    }

    .project__header {
        line-height: 5.5rem;
    }

    .project__btn--container button {
        padding: 15px 25px;
    }
}

/* Skills Section */
.skills {
    margin: 5px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    font-size: 1rem;
}

.skills__header {
    padding-top: 25px;
    text-align: center;
    line-height: 4.5rem;
    transition: all ease-in-out .5s;
}

.skills__container {
    margin: 0 auto;
    padding: 25px 20px;
    width: 100%;
    border-radius: 5px;
    box-shadow: -.5px 5.5px 15px #08b67c;
}

.skills__container::before {
    box-shadow: -.5px 7.5px 15px #0873b6;
}

.skills__container ul {
    margin: 0 auto;
    padding: 0 auto;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0px;
    width: 100%;
    list-style-type: none;
}

.skills__list-item {
    position: relative;
    margin: 10px;
    padding: 0;
}

.skills__list-item::before {
    content: '+ ';
    color: #08b67c;
    font-size: 1.5rem;
    font-weight: bolder;
}

@media screen and (min-width: 400px) {
    .skills__containter {
        padding: 25px;
    }

    .skills__container ul {
        grid-template-columns: 1fr 1fr;
    }

    .skills__list-item {
        margin: 10px auto;
    }
}

@media screen and (min-width: 515px) {
    .skills {
        font-size: 1.15rem;
    }

    .skills__container ul {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

@media screen and (min-width: 700px) {
    .skills__container {
        width: 90vw;
    }

    .skills__container ul {
        grid-template-columns: 1fr 1fr 1fr 1fr;
    }
}

/* Bio Section */
.bio {
    margin: 25px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
}

.bio__container {
    display: flex;
    flex-direction: column-reverse;
    margin: 0 auto;
    max-width: 90%;
    line-height: 1.5;
    font-size: 1.2rem;
}

.bio h2, h3 {
    text-align: center;
    line-height: 4.5rem;
    font-size: 2.0rem;
    transition: all ease-in-out .5s;
}

.bio__content {
    margin: 0 auto;
    max-width: 90%;
}

.bio__photo {
    text-align: center;
}

.bio__photo img {
    height: auto;
    margin-bottom: 25px;
    max-width: 100%;
    border-radius: 20px;
}

@media screen and (min-width: 600px) {
    .bio__container {
        flex-direction: column;
    }

    .bio__bio {
        margin: 0 auto;
        max-width: 80%;
    }

    .bio__photo {
        text-align: center;
    }

    .bio__photo img {
        max-width: 80%;
    }
}

@media screen and (min-width: 800px) {
    .bio__photo img {
        max-width: 70%;
    }
}

@media screen and (min-width: 1400px) {
    .bio__content {
        max-width: 900px;
    }
}

/* Contact Section */
.contact {
    margin: 25px;
    text-align: center;
    line-height: 1.5;
    font-size: 1.5rem;
}

/* Footer Section */
.footer {
    padding: 25px;
    background-color: #1DA1F2;
    color: white;
    font-size: 1rem;
    text-align: center;
}

.social-icon {
    padding: 10px;
    color: white;
    font-size: 2rem;
}

